kubernetes/api/base/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: ""
      http:
        paths:
          - pathType: Prefix
            path: /api/Product/productlist
            backend:
              service:
                name: api
                port:
                  number: 8080
